[package]
name = "ncmdump-wasm"
version = "0.1.0"
authors = ["Starccy <452276725@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.6.0"
base64 = "0.13.0"
block-modes = "0.7.0"
console_error_panic_hook = "0.1.6"
id3 = "0.6.2"
log = "0.4.14"
metaflac = "0.2.4"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = "0.2.63"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

#aes = "0.6.0"
#glob = "0.3.0"
#metaflac = "0.2.4"
#id3 = "0.5.0"

[profile.release]
opt-level = "s"
